# Projekty

./: README.md
Bot Discord/: README.md  Wraith_bot.py
Serwery z katalogami/: README.md  diagram.txt  servers.py  servers__tests.py
Symulacja sieci/: CMakeLists.txt  README.md
Symulacja sieci/diagram-UML/: diagram-Factory-link.txt  diagram-Factory.txt  diagram-Storage-Nodes-link.txt  diagram-Storage-Nodes.txt
Symulacja sieci/include/: factory.hpp  helpers.hpp  nodes.hpp  package.hpp  reports.hpp  simulation.hpp  storage_types.hpp  types.hpp
Symulacja sieci/src/: factory.cpp  helpers.cpp  nodes.cpp  package.cpp  reports.cpp  simulation.cpp  storage_types.cpp
Symulacja sieci/test/: test_reports.cpp
Ukladanie instalacji/: DANE.xlsx  README.md  SA.py  algorytm_genetyczny.py  algorytm_konstrukcyjny.py  implementacja_problemu.py  main.py  testy.py  wczytywanie_danych.py  wyrysowywanie_rozwiązania.py
Ukladanie instalacji/EA_tests/: EA_BasicTest_MutationByEdges.txt  EA_BasicTest_MutationByKnots.txt  EA_HighPopulation_MutationByEdges.txt  EA_HighPopulation_MutationByKnots.txt  EA_LowPenalty_MutationByEdges.txt  EA_LowPenalty_MutationByKnots.txt  EA_LowPopulation_MutationByEdges.txt  EA_LowPopulation_MutationByKnots.txt  EA_MutationVeryImportant_MutationByEdges.txt  EA_MutationVeryImportant_MutationByKnots.txt
